--- a/back-end/package.json
+++ b/back-end/package.json
@@ -1,8 +1,13 @@
 {
   "dependencies": {
     "cors": "^2.8.5",
+    "deploy-spotify-project": "file:..",
     "express": "^4.21.2",
-    "mongodb": "^6.13.1"
+    "mongodb": "^6.13.1",
+    "path": "^0.12.7"
   },
-  "type": "module"
+  "type": "module",
+  "scripts": {
+    "start": "node ./api/server.js"
+  }
 }
