--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "deploy-spotify-project",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "build": "npm install --prefix back-end && npm install --prefix front-end && npm run build --prefix front-end",
